--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --background-color: rgb(20,26,41);
+    --background-color: #141a29;
     --orange-color: #ffa260;
     --yellow-color: #f1ff5c;
     --white-color: #ffffff;
